--- a/extensions.yml
+++ b/extensions.yml
@@ -48,3 +48,40 @@ other:
   - Shan.code-settings-sync #VSCodeの設定同期
   - WakaTime.vscode-wakatime #時間計測wakatime
 undefind:
+  - CoenraadS.bracket-pair-colorizer-2
+  - DavidAnson.vscode-markdownlint
+  - GitHub.vscode-pull-request-github
+  - IBM.output-colorizer
+  - MS-CEINTL.vscode-language-pack-ja
+  - RoscoP.ActiveFileInStatusBar
+  - Shan.code-settings-sync
+  - VisualStudioExptTeam.vscodeintellicode
+  - WakaTime.vscode-wakatime
+  - codezombiech.gitignore
+  - donjayamanne.githistory
+  - eamodio.gitlens
+  - esbenp.prettier-vscode
+  - fabiospampinato.vscode-todo-plus
+  - foxundermoon.shell-format
+  - mads-hartmann.bash-ide-vscode
+  - mechatroner.rainbow-csv
+  - mosapride.zenkaku
+  - mrmlnc.vscode-duplicate
+  - ms-azuretools.vscode-docker
+  - ms-vscode-remote.remote-containers
+  - mushan.vscode-paste-image
+  - naumovs.color-highlight
+  - oderwat.indent-rainbow
+  - rogalmic.bash-debug
+  - rogalmic.zsh-debug
+  - rust-lang.rust
+  - shakram02.bash-beautify
+  - shardulm94.trailing-spaces
+  - streetsidesoftware.code-spell-checker
+  - taichi.vscode-textlint
+  - vadimcn.vscode-lldb
+  - vincaslt.highlight-matching-tag
+  - vscode-icons-team.vscode-icons
+  - wayou.vscode-todo-highlight
+  - xyz.local-history
+  - yzhang.markdown-all-in-one
