--- a/extensions.yml
+++ b/extensions.yml
@@ -48,3 +48,4 @@ other:
   - Shan.code-settings-sync #VSCodeの設定同期
   - WakaTime.vscode-wakatime #時間計測wakatime
 undefind:
+  - wraith13.background-phi-colors
