--- a/extensions.yml
+++ b/extensions.yml
@@ -54,3 +54,5 @@ other:
   - WakaTime.vscode-wakatime #時間計測wakatime
   - GrapeCity.gc-excelviewer #Excel Viewer
 undefind:
+  - formulahendry.vscode-mysql
+  - johnpapa.vscode-peacock
