--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.26.0"
 isort = "^5.10.1"
 black = "^21.12b0"
 pyproject-flake8 = "^0.0.1-alpha.2"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 
