--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,6 @@
 name: Create PullRequest extensions update
 
-on:
-  schedule:
-    - cron: "0 15 * * *"
+on: push
 
 jobs:
   update:
@@ -13,7 +11,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
-       - name: Setup
+      - name: Setup
         run: |
           pip install poetry
           poetry config virtualenvs.create false
