--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,9 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.10.0
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: 3.10.0
+          architecture: x64
       - name: Setup
         run: |
           pip install poetry
@@ -21,20 +22,14 @@ jobs:
         env:
           GIST_URL: ${{ secrets.GIST_URL }}
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v2.4.0
+        uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          # The message to use when committing changes.
           commit-message: Update extensions.yml
-          # The email address of the commit author.
-          author-email: ${{ secrets.EMAIL }}
-          # The name of the commit author.
-          author-name: ${{ secrets.NAME }}
-          # The title of the pull request.
-          title: Update extensions.yml
-          # The body of the pull request.
-          body: Update
-          # The pull request branch name.
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          signoff: false
           branch: auto_update
-          # The branch suffix type.
           branch-suffix: short-commit-hash
+          delete-branch: true
+          title: Update extensions.yml
+          body: Update
