--- a/extensions.json
+++ b/extensions.json
@@ -3,72 +3,53 @@
     "donjayamanne.githistory",
     "GitHub.vscode-pull-request-github",
     "eamodio.gitlens",
-    "eamodio.gitlens-insiders"
+    "codezombiech.gitignore"
   ],
-  "unknown": [
-    "apollographql.vscode-apollo",
-    "bradlc.vscode-tailwindcss",
-    "ChakrounAnas.turbo-console-log",
-    "codezombiech.gitignore",
-    "CoenraadS.bracket-pair-colorizer-2",
-    "DavidAnson.vscode-markdownlint",
-    "dbaeumer.vscode-eslint",
-    "dsznajder.es7-react-js-snippets",
+  "front": [
     "esbenp.prettier-vscode",
-    "fabiospampinato.vscode-todo-plus",
-    "firsttris.vscode-jest-runner",
-    "fivethree.vscode-svelte-snippets",
+    "dbaeumer.vscode-eslint",
     "formulahendry.auto-rename-tag",
-    "foxundermoon.next-js",
-    "foxundermoon.shell-format",
-    "george-alisson.html-preview-vscode",
-    "GrapeCity.gc-excelviewer",
-    "GraphQL.vscode-graphql",
-    "IBM.output-colorizer",
-    "ICS.japanese-proofreading",
-    "kumar-harsh.graphql-for-vscode",
-    "mads-hartmann.bash-ide-vscode",
-    "MariusAlchimavicius.json-to-ts",
-    "mechatroner.rainbow-csv",
-    "mosapride.zenkaku",
-    "mrmlnc.vscode-duplicate",
-    "ms-azuretools.vscode-docker",
-    "MS-CEINTL.vscode-language-pack-ja",
+    "bradlc.vscode-tailwindcss",
+    "naumovs.color-highlight",
+    "steoates.autoimport",
+    "VisualStudioExptTeam.vscodeintellicode"
+  ],
+  "GraphQL": ["GraphQL.vscode-graphql", "kumar-harsh.graphql-for-vscode"],
+  "python": [
     "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-toolsai.jupyter",
-    "ms-toolsai.jupyter-keymap",
-    "ms-toolsai.jupyter-renderers",
-    "ms-vscode-remote.remote-containers",
-    "msjsdiag.debugger-for-chrome",
-    "mtxr.sqltools",
-    "mtxr.sqltools-driver-mysql",
-    "mtxr.sqltools-driver-pg",
-    "mushan.vscode-paste-image",
-    "naumovs.color-highlight",
-    "oderwat.indent-rainbow",
-    "Orta.vscode-jest",
-    "Prisma.prisma",
-    "ritwickdey.LiveServer",
-    "rogalmic.bash-debug",
-    "rogalmic.zsh-debug",
-    "RoscoP.ActiveFileInStatusBar",
-    "rust-lang.rust",
-    "shakram02.bash-beautify",
-    "Shan.code-settings-sync",
-    "shardulm94.trailing-spaces",
-    "steoates.autoimport",
+    "ms-toolsai.jupyter-renderers"
+  ],
+  "shell": [
+    "foxundermoon.shell-format",
+    "mads-hartmann.bash-ide-vscode",
+    "shakram02.bash-beautify"
+  ],
+  "docker": [
+    "ms-azuretools.vscode-docker",
+    "ms-vscode-remote.remote-containers"
+  ],
+  "CSV": ["GrapeCity.gc-excelviewer", "mechatroner.rainbow-csv"],
+  "markdown": ["yzane.markdown-pdf", "yzhang.markdown-all-in-one"],
+  "text write": [
+    "ICS.japanese-proofreading",
     "streetsidesoftware.code-spell-checker",
-    "taichi.vscode-textlint",
-    "vadimcn.vscode-lldb",
-    "vincaslt.highlight-matching-tag",
-    "VisualStudioExptTeam.vscodeintellicode",
-    "vscode-icons-team.vscode-icons",
-    "WakaTime.vscode-wakatime",
+    "taichi.vscode-textlint"
+  ],
+  "colorizer": [
+    "IBM.output-colorizer",
     "wayou.vscode-todo-highlight",
-    "wraith13.background-phi-colors",
-    "xyz.local-history",
-    "yzane.markdown-pdf",
-    "yzhang.markdown-all-in-one"
+    "mosapride.zenkaku",
+    "oderwat.indent-rainbow",
+    "shardulm94.trailing-spaces"
+  ],
+  "general": [
+    "MS-CEINTL.vscode-language-pack-ja",
+    "ritwickdey.LiveServer",
+    "vincaslt.highlight-matching-tag",
+    "vscode-icons-team.vscode-icons",
+    "Shan.code-settings-sync",
+    "mrmlnc.vscode-duplicate"
   ]
 }
